2008-02-27  Michael Hutchinson  <mhutchinson@novell.com> 

	* MonoDevelop.AspNet.Parser/Internal:
	* MonoDevelop.AspNet.Parser/Tree:
	* MonoDevelop.AspNet.Parser.Internal:
	* MonoDevelop.AspNet.Parser.Dom:
	* AspNetAddIn.mdp:
	* Makefile.am: Finish restructuring directories to reflect namespaces.
	
	* MonoDevelop.AspNet.addin.xml: Clean up whitespace.

2008-02-27  Michael Hutchinson <mhutchinson@novell.com> 

	* Deployment, MonoDevelop.AspNet, Gui, Parser,
	  MonoDevelop.AspNet.Deployment, MonoDevelop.AspNet.Gui, Project,
	  AspNetAddIn.mdp, Makefile.am, MonoDevelop.AspNet.Parser: Restructure
	  directories to reflect namespaces.

2008-02-26  Michael Hutchinson <mhutchinson@novell.com> 

	* Deployment/WebDeployService.cs, Deployment/WebDeployCommands.cs,
	  Deployment/WebDeployLaunchDialog.cs,
	  Deployment/WebDeployOptionsPanel.cs,
	  Deployment/WebDeployOptionsPanelWidget.cs,
	  Gui/AspNetConfigurationPanel.cs, Gui/AspNetConfigurationPanelWidget.cs,
	  Gui/XspOptionsPanel.cs, Gui/XspOptionsPanelWidget.cs,
	  Project/AspNetDisplayBinding.cs, Project/AspNetCommands.cs,
	  Project/ProjectFolderNodeBuilderExtension.cs,
	  Project/AspNetAppProjectBinding.cs,
	  Project/AspNetMSBuildProjectExtension.cs, Project/XspParameters.cs,
	  Project/AspNetAppProject.cs, Project/CodeBehind.cs,
	  Project/VerifyCodeBehindBuildStep.cs,
	  Project/AspNetAppProjectConfiguration.cs,
	  Project/AspNetCodeBehindProvider.cs,
	  Project/AspNetFileDescriptionTemplate.cs, Project/WebTypeManager.cs,
	  gtk-gui/MonoDevelop.AspNet.Gui.XspOptionsPanelWidget.cs,
	  gtk-gui/AspNetAddIn.AspNetConfigurationPanelWidget.cs,
	  gtk-gui/AspNetAddIn.XspOptionsPanelWidget.cs,
	  gtk-gui/MonoDevelop.AspNet.Gui.AspNetConfigurationPanelWidget.cs,
	  gtk-gui/gui.stetic, AspNetAddIn.addin.xml, AspNetAddIn.mdp, Makefile.am,
	  Parser/Tree/ParentNode.cs, Parser/Tree/ServerCommentNode.cs,
	  Parser/Tree/Visitor.cs, Parser/Tree/ServerIncludeNode.cs,
	  Parser/Tree/ILocation.cs, Parser/Tree/TagNode.cs,