@@ -39,6 +39,7 @@ namespace MonoDevelop.AspNet.Parser.Dom
 	public abstract class ParentNode : Node
 	{
 		protected List<Node> children = new List<Node> ();
+		ILocation endLocation;
 		
 		public ParentNode (ILocation location)
 			: base (location)
@@ -56,30 +57,68 @@ namespace MonoDevelop.AspNet.Parser.Dom
 			this.AddChild (new TextNode (location, text));
 		}
 		
-		public Node GetNodeAtPosition (int line, int col)
+		//if the tag has an end tag, this is the location of the end tag
+		public ILocation EndLocation {
+			internal set { endLocation = new Location (value); }
+			get { return endLocation; }
+		}
+		
+		public override Node GetNodeAtPosition (int line, int col)
 		{
-			//check if position is before or within this node's definition
-			int positionMatch = ContainsPosition (line, col);
+			//check if position is before or within this node's actual tags
+			int positionMatch = base.ContainsPosition (line, col);
 			if (positionMatch < 0)
 				return null;
 			else if (positionMatch == 0)
 				return this;
+			else if (EndLocation != null) {
+				positionMatch = LocationContainsPosition (EndLocation, line, col);
+				if (positionMatch == 0)
+					return this;
+				else if (positionMatch > 0)
+					return null;
+			}
 			
 			//binary search through children
 			int start = 0, end = children.Count - 1;
-			do {
+			while (start < end) {
+				//(start + end) cannot be more than int.MaxValue so no need to worry about overflow
 				int middle = (int) Math.Ceiling ((double) (start + end) / 2);
 				int middleMatches = children[middle].ContainsPosition (line, col);
+				
+				//simple binary search
 				if (middleMatches == 0)
-					return children[middle];
-				else if (middleMatches < 0)
+					return children[middle].GetNodeAtPosition (line, col);
+				else if (middleMatches > 0)
 					start = middle;
 				else
 					end = middle;
-			} while (start < end);
-			
-			//position is after the node and its children
+				
+				//special-cas ethe end so that gaps in the ILocation continuum can't cause an infinite loop
+				if (end - start == 1) {
+					Node n = (middle == start)? children[end] : children[start];
+					if (n.ContainsPosition (line, col) == 0)
+						return n.GetNodeAtPosition (line, col);	
+					//oops, hope the user reports this
+					MonoDevelop.Core.LoggingService.LogWarning ("Gap in ASP.NET parsed page between {0} and {1}", children[start], children[end]);
+					return null;
+				}
+			}
+			//position not in the node and its children
 			return null;
+		}
+		
+		public override int ContainsPosition (int line, int col)
+		{
+			if (EndLocation != null) {
+				if (LocationContainsPosition (EndLocation, line, col) > 0)
+					return 1;
+				else if (base.ContainsPosition (line, col) < 0)
+					return -1;
+				else
+					return 0;
+			}
+			return base.ContainsPosition (line, col);
 		}
 		
 		public override string ToString ()
